feat: add accounts and mutations endpoint
