# docs/openapi.yaml
@@ -2,13 +2,22 @@ openapi: 3.0.0
 info:
   version: 0.0.1
   title: 'Finkita service swagger docs'
-  description: 'Service for managing Early Settlement transaction and configuration'
+  description: 'Service to manage financial tracking data'
 servers:
-  - description: SwaggerHub API Auto Mocking
-    url: 'https://virtserver.swaggerhub.com/Xendit/early-settlement-service/0.0.1'
   - description: Local development
-    url: 'http://localhost:3000'
+    url: 'http://localhost:8080'
 paths:
+  /healthcheck/liveness:
+    get:
+      tags:
+        - healthcheck
+      responses:
+        '200':
+          description: 'OK'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Healthcheck'
   /api/v1/accounts:
     get:
       tags:
@@ -59,12 +68,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Account'
-        # 404:
-        #   description: Account not found
-        #   content:
-        #     application/json:
-        #       schema:
-        #         $ref: '#/components/schemas'
+        404:
+          description: Account not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas'
     patch:
       tags:
         - account
@@ -90,28 +99,91 @@ paths:
               schema:
                 $ref: '#/components/schemas/Account'
 
+    delete:
+      tags:
+        - account
+      operationId: deleteAccountByID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            example: '10'
+      responses:
+        200:
+          description: deleted account
+          content:
+            application/json:
+              schema:
+                # TODO: define schema for deleted account response
+                $ref: '#/components/schemas/Account'
+
+  /api/v1/mutations:
+    get:
+      tags:
+        - mutation
+      operationId: getMutations
+      responses:
+        200:
+          description: A list of mutations
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Account'
+
+  /api/v1/mutations/{id}:
+    get:
+      tags:
+        - mutation
+      operationId: getMutationById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            example: 10
+      responses:
+        200:
+          description: A mutation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Account'
+        404:
+          description: Mutation not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas'
+
 components:
   schemas:
     Account:
       type: object
       properties:
         id:
-          type: number
-          example: '10'
+          type: string
+          example: 'c0ca3887-a375-4cf3-bb40-ef93c40254ef'
         email:
           type: string
-          nullable: true
           example: '13'
         bank:
           type: string
-          nullable: true
           example: 'Bender B. Rodriguez'
         account_number:
           type: string
-          nullable: true
           example: 'Bending Unit'
     AccountRequest:
       type: object
+      required:
+        - email
+        - bank
+        - account_number
+        - password
       properties:
         email:
           type: string
@@ -140,6 +212,49 @@ components:
         password:
           type: string
           example: 'str0ngp4ssw0rdzz'
+    Mutation:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 'c0ca3887-a375-4cf3-bb40-ef93c40254ef'
+        account_id:
+          type: string
+          example: 'c0ca3887-a375-4cf3-bb40-ef93c40254ef'
+        email:
+          type: string
+          example: '13'
+        date:
+          type: string
+        description:
+          type: string
+          example: 'Twitch donation'
+        type:
+          type: string
+          example: 'debit'
+        amount:
+          type: number
+          example: 1000
+        balance:
+          type: number
+          example: 10000
+    Healthcheck:
+      type: object
+      properties:
+        status:
+          type: string
+          example: 'OK'
+        dependencies:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: string
+                example: 'postgresql'
+              status:
+                type: string
+                example: 'OK'
   parameters:
     apiKey:
       in: header
